@@ -570,4 +570,7 @@ Released April 26, 2007
 3.1-005 released
 
 Oct 11, 2007 3.1-006 development begins.
-  October 15, 2007 - BZ324 - Fixed a bunch of issues with the test data source.
+  October   15, 2007 - BZ324 - Fixed a bunch of issues with the test data source.
+  November  26, 2007 - BZ327 - Multicolored monster has problems when parameter definitions
+                               are changed and when such changes are asked to modify spectrum
+                               definitions.
